<resources>
    <string name="app_name">Awimul</string>
    <string name="unpackLTitle">Unpacking...</string>
    <string name="unpackLText">Unpacking files, please wait.</string>
    <string name="downLTitle">Downloading...</string>
    <string name="downLText">Downloading files, please wait.</string>
    <string name="wineLTitle">Loading...</string>
    <string name="wineLText">Loading wine, please wait.</string>
    <string name="packageDTitle">Deleting...</string>
    <string name="packageDText">Deleting package, please wait.</string>
    <string name="warning">Warning</string>
    <string name="obbWarning">There is no obb file. Please, install it and reload app.</string>
    <string name="permissionWarning">There is no permission for using external storage. Please, grant it and reload app.</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="downloadObb">Download Obb</string>
    <string name="confirmTurnOff">Are you sure that you want to turn off the machine?</string>
    <string name="confirmDelete">Are you sure that you want to delete the user?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="setSize">Set size</string>
    <string name="recreate">Recreate</string>
    <string name="add_a_new_user">Add a new user</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="work_in_background">Work in background</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="show_cursor">Show cursor</string>
    <string name="is_working">The app is working</string>
</resources>